force-app/main/default/objects/Account_Contact_Relationship__c/Account_Contact_Relationship__c.object-meta.xml
<CustomObject>
    <description>This junction object connects the Account and Contact standard objects in a many-to-many relationship and houses customized user permission indicators which can be enabled per portal user and can be made unique to a given Account-Contact pair.</description>
    <label>Account Contact Relationship</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Account Contact Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contact Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>