force-app/main/default/objects/Account_Contact_Relationship__c/fields/Manage_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Manage_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Accounts</label>
    <type>Checkbox</type>
</CustomField>