force-app/main/default/objects/Account_Contact_Relationship__c/fields/Manage_Orders__c.field-meta.xml
<CustomField>
    <fullName>Manage_Orders__c</fullName>
    <label>Manage Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>RO</fullName>
            </value>
            <value>
                <fullName>RW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>