force-app/main/default/objects/Account_Contact_Relationship__c/fields/Portal_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Contact__c</fullName>
    <description>Related Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>Account_Contact_Relationship</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>