force-app/main/default/objects/Account_Contact_Relationship__c/fields/TCP_AddPermission__c.field-meta.xml
<CustomField>
    <fullName>TCP_AddPermission__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCP Access</label>
    <type>Text</type>
</CustomField>