force-app/main/default/objects/Account_Contact_Relationship__c/fields/TCP_Status__c.field-meta.xml
<CustomField>
    <fullName>TCP_Status__c</fullName>
    <label>TCP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Non Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>